fixed layout issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,31 +3,43 @@
 
 body {
   font-family: 'RobotoDraft', 'Nanum Gothic', sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
 .menu-button {
   width: 80px
 }
 
-.wrapper {
+.body-wrapper {
   width: 100%;
-  min-height: 100%
+  height: 100%
 }
 
 .nowrap {
   white-space: nowrap;
 }
 
+.sidenav {
+
+}
+
 .sidenav-list * {
   padding: 15px;
 }
 
-.content-body {
+.right-wrapper {
   width: 100%;
+  height: 100%;
   background-color: lightgray;
+}
+
+.content-wrapper {
+  height: 100%;
+  overflow-y: auto;
 }
 
 .contents {
   max-width: 800px;
-  margin: 20px auto;
+  margin: auto;
 }
